--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/throttle-debounce": "^5.0.2",
+    "baseline-browser-mapping": "^2.9.16",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
