--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "developer-icons": "^6.0.5",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
