--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-intersect": "^2.2.0",
     "throttle-debounce": "^5.0.2"
   },
   "devDependencies": {
